--- a/src/ui.css
+++ b/src/ui.css
@@ -106,6 +106,23 @@ section > * + * {
 section.footer {
   margin-top: 24px;
 }
+section.collection {
+  position: relative;
+}
+section.collection > span {
+  position: absolute;
+  right: 12px;
+  top: 26px;
+  font-size: 12px;
+  opacity: 0.6;
+  text-align: right;
+}
+section.collection > span.exist {
+  color: #FF4F55;
+}
+section.collection > span.empty {
+  color: #2ACA6E;
+}
 
 img {
   height: auto;
