1. 페이지에 따라 설정 정보 다르게 저장하게 수정 2. 수정된 값 개수 카운팅

--- a/src/ui.css
+++ b/src/ui.css
@@ -66,6 +66,10 @@ button.brand {
   --color-border: transparent;
   --color-border-focus: var(--color-border-brand-focus);
 }
+button.loading {
+  user-select: none;
+  cursor: progress;
+}
 
 input {
   background: 1px solid var(--color-bg);
@@ -108,7 +112,12 @@ section > * + * {
 }
 
 section.footer {
-  margin-top: 24px;
+  margin-top: 10px;
+}
+section.footer > .info {
+  font-size: 12px;
+  text-align: right;
+  opacity: 0.6;
 }
 section.collection {
   position: relative;
