추가/수정/삭제 로우 개수 표시하는 기능 추가

--- a/src/ui.css
+++ b/src/ui.css
@@ -112,12 +112,22 @@ section > * + * {
 }
 
 section.footer {
-  margin-top: 10px;
+  margin-top: 8px;
 }
 section.footer > .info {
   font-size: 12px;
   text-align: right;
   opacity: 0.6;
+  height: 12px;
+}
+section.footer > .info > *:not(:last-child) {
+  margin-right: 8px;
+}
+section.footer > .info > .add {
+  color: #2C6AFD;
+}
+section.footer > .info > .delete {
+  color: #DF2C34;
 }
 section.collection {
   position: relative;
